--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         android:supportsRtl="true"
         android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/AppTheme">
+        <activity android:name=".TampilActivity"></activity>
         <activity android:name=".InputActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
